# django-tqdm

./: .coveragerc  .editorconfig  .flake8  .gitignore  .isort  .markdownlint.yaml  .pylintrc  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  clean.sh  demos.py  developer_doc.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: release.yaml  test.yaml  test_release.yaml  update_github_actions.yaml
demos/: __init__.py  demo1.py  demo2.py  demo3.py
django_tqdm/: __init__.py  __init__.pyi  django_tqdm.py  django_tqdm.pyi
django_tqdm/demos/: demo1.py  demo2.py  demo3.py
django_tqdm/tests/: tests.py
scripts/: pydiatra.sh
tests/: __init__.py
