[metadata]
name = django_tqdm
version = 1.1.0
project_urls =
    Changelog=https://github.com/desecho/django-tqdm/blob/master/CHANGELOG.md
    Source=https://github.com/desecho/django-tqdm
license = MIT
license_file = LICENSE
author = Anton Samarchyan
author_email = desecho@gmail.com
description = Fast, Extensible Progress Meter (tqdm) For Django
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = progressbar progressmeter progress bar meter rate eta console terminal time
platforms = any
# Trove classifiers (https://pypi.org/pypi?%3Aaction=list_classifiers)
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Environment :: Console
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: User Interfaces
    Topic :: System :: Monitoring
    Topic :: Terminals
    Topic :: Utilities
    Intended Audience :: Developers
    Intended Audience :: System Administrators

[options]
setup_requires = setuptools>=42
include_package_data = True
python_requires = >=3.7
packages = find:

[isort]
combine_as_imports = true
default_section = THIRDPARTY
known_first_party = django_tqdm
include_trailing_comma = true
line_length = 119
multi_line_output = 3
skip = src/moviesapp/migrations

[pydocstyle]
# Disable D212 because D212 and D213 are mutually exclusive.
# Disable D203 because D203 and D211 are mutually exclusive.
# Disable all "Missing Docstrings" errors - D100,D101,D102,D103,D104,D105,D106,D107.
ignore = D100,D101,D102,D103,D104,D105,D106,D107,D203,D212

[flake8]
exclude = .git,venv
max-line-length = 119
statistics = True
# Disable E121,E124,E128 (indentation) because it is handled by pylint
# Disable E402 (imports) because it is handled by isort
# Disable E501 because it is handled by black
ignore = E121,E124,E128,E402,E501

[tool:pytest]
python_files = tests.py
