[metadata]
name = django_tqdm
version = 1.3.0
project_urls =
    Changelog=https://github.com/desecho/django-tqdm/blob/master/CHANGELOG.md
    Source=https://github.com/desecho/django-tqdm
license = MIT
license_file = LICENSE
author = Anton Samarchyan
author_email = desecho@gmail.com
description = Fast, Extensible Progress Meter (tqdm) For Django
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = progressbar progressmeter progress bar meter rate eta console terminal time
platforms = any
# Trove classifiers (https://pypi.org/pypi?%3Aaction=list_classifiers)
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Environment :: Console
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: User Interfaces
    Topic :: System :: Monitoring
    Topic :: Terminals
    Topic :: Utilities
    Intended Audience :: Developers
    Intended Audience :: System Administrators

[options]
setup_requires = setuptools>=42
include_package_data = True
python_requires = >=3.7

[isort]
combine_as_imports = true
default_section = THIRDPARTY
known_first_party = django_tqdm
include_trailing_comma = true
line_length = 119
multi_line_output = 3

[flake8]
max-line-length = 119
statistics = True
# Disable E121, E124, E128 (indentation) because it is handled by pylint.
# Disable E402 (imports) because it is handled by isort.
# Disable E501 because it is handled by black.
# Disable E203, W503 because it conflicts with black.
ignore = E121,E124,E128,E203,E402,E501,W503

[tool:pytest]
python_files = test_*
addopts = --cov-report xml --cov-report term-missing --cov django_tqdm -vv

[mypy]
mypy_path = django_tqdm
namespace_packages = True
disallow_subclassing_any = False
warn_no_return = True
warn_unreachable = True
local_partial_types = True
pretty = True
strict = True

[mypy-tqdm.*]
ignore_missing_imports = True
